--- a/app/src/main/res/menu/menu_view_list.xml
+++ b/app/src/main/res/menu/menu_view_list.xml
@@ -1,13 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.myreminders.CreateList">
-    <item
-        android:id="@+id/add_list"
-        android:icon="@android:drawable/ic_menu_add"
-        android:title="@string/action_add_reminder"
-        app:showAsAction="always"
-        android:onClick="addReminder"/>
+    tools:context="com.example.myreminders.ViewList">
     <item
         android:id="@+id/action_home"
         android:orderInCategory="1"
@@ -17,5 +11,10 @@
         android:id="@+id/action_create_list"
         android:orderInCategory="2"
         android:title="@string/action_add_reminder"
-        app:showAsAction="never" />
+        app:showAsAction="never"
+    <item
+        android:id="@+id/action_create_list"
+        android:orderInCategory="2"
+        android:title="@string/action_add_item"
+        app:showAsAction="never" />/>
 </menu>
