This is the 3rd version of my reminder.

--- a/app/src/main/res/layout/li_addreminder_list.xml
+++ b/app/src/main/res/layout/li_addreminder_list.xml
@@ -33,13 +33,13 @@
                     android:textSize="16dp" />
 
                 <TextView
-                    android:id="@+id/textView2"
+                    android:id="@+id/dateTextView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="dateTextView" />
 
                 <TextView
-                    android:id="@+id/textView3"
+                    android:id="@+id/dateexpiredTextView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="typeTextView" />
