--- a/app/src/main/res/layout/content_view_list.xml
+++ b/app/src/main/res/layout/content_view_list.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".activity_view_list"
+    tools:context=".ViewList"
     tools:showIn="@layout/activity_view_list">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
