--- a/app/src/main/res/menu/menu_add_reminder.xml
+++ b/app/src/main/res/menu/menu_add_reminder.xml
@@ -1,7 +1,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.myreminders.ViewList">
+    tools:context="com.example.myreminders.AddReminder">
+    <item
+        android:id="@+id/add_reminder"
+        android:icon="@android:drawable/ic_menu_add"
+        android:title="@string/action_add_reminder"
+        app:showAsAction="always"
+        android:onClick="addReminder"/>
     <item
         android:id="@+id/action_home"
         android:orderInCategory="1"
@@ -11,10 +17,5 @@
         android:id="@+id/action_create_list"
         android:orderInCategory="2"
         android:title="@string/action_add_reminder"
-        app:showAsAction="never"
-    <item
-        android:id="@+id/action_create_list"
-        android:orderInCategory="2"
-        android:title="@string/action_add_item"
-        app:showAsAction="never" />/>
+        app:showAsAction="never" />
 </menu>
